作者の表記などを追加

--- a/war/index.html
+++ b/war/index.html
@@ -7,6 +7,9 @@
 <script type="text/javascript" src="./example.js"></script>
 </head>
 <body>
+<p>
+<a href="https://sites.google.com/site/apiforyamareco/">ヤマレコAPI</a>を利用して、過去100件の山行記録を拍手の多い順に並べる。
+</p>
 
 ユーザID:
 <input id="uid" type="text" value="49432"/>
@@ -17,5 +20,12 @@
 <tbody>
 </tbody>
 </table>
+
+<hr/>
+ 作成者：<a href="https://github.com/shuetsu">shuetsu</a>
+  - <a href="https://github.com/shuetsu/yamareco_api">リポジトリ</a><br/>
+ ※本サイトの作成元は<a href="http://www.yamareco.com">ヤマレコ</a>ではありません。<br/>
+ ※山行記録の著作権は各投稿者のユーザーが有しています。APIを経由しない他の方法での他の出版物およびWebサイトへの掲載は禁止されています。
+ 
 </body>
 </html>
